--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,1 +1,89 @@
-<p>aboutus works!</p>
+
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header h4">
+                วิสัยทัศน์ (Vision)
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-5">
+                        เป็นศูนย์กลางการให้บริการที่เป็นเลิศ เพื่อสนับสนุนพันธกิจของมหาวิทยาลัย
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header h4">
+                พันธกิจ (Mission)
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-5">
+                        1. มุ่งพัฒนาบุคลากรด้านทักษะ วิชาชีพ ประสบการณ์และสวัสดิการที่เพียงพอ
+                        2. มุ่งพัฒนากระบวนการที่มีคุณภาพ<br>
+                        3. มุ่งพัฒนาระบบสารสนเทศเพื่อการบริหารจัดการที่มีประสิทธิภาพ
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header h4">
+                ประเด็นยุทธศาสตร์ (Strategic Issues)
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-5">
+                        1. การพัฒนาบุคลากรด้านทักษะ ความรู้ และประสบการณ์วิชาชีพ ให้เป็นไปตามสมรรถนะ<br>
+                        2. การพัฒนากระบวนการในการทำงานให้เกิดคุณภาพอย่างต่อเนื่อง<br>
+                        3. การพัฒนาระบบสารสนเทศเพื่อการบริหารจัดการที่มีประสิทธิภาพ<br>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<br>
+<div class="row">
+    <div class="col-12">
+        <div class="card">
+            <div class="card-header h4">
+                เป้าประสงค์ (Goals)
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-5">
+                        ความพึงพอใจของผู้รับบริการ<br>
+                        ข้อมูลถูกต้องแม่ยำ<br>
+                        กระบวนการทำงานที่มีประสิทธิภาพ<br>
+                        ระบบพัฒนากายภาพและบำรุงรักษาที่มีประสิทธิภาพ<br>
+                        ระบบประกันคุณภาพที่มีประสิทธิภาพ<br>
+                        ระบบบริหารความเสี่ยงที่มีประสิทธิภาพ<br>
+                        การลดรอบระยะเวลาการทำงานและบริการ<br>
+                        การพัฒนาบุคลากรตามสมรรถนะอย่างต่อเนื่อง<br>
+                        ระบบการจัดการองค์ความรู้ขององค์กร<br>
+                        การพัฒนาระบบสารสนเทศที่มีประสิทธิภาพเพื่อการตัดสินใจ<br>
+                        การวิจัยสถาบัน<br>
+                        การควบคุมต้นทุนและค่าใช้จ่ายอย่างมีประสิทธิภาพ<br>
+                        การบริหารทรัพยากรที่มีประสิทธิภาพ<br>
+                        การบริหารทรัพย์สินเพื่อให้เกิดรายได้<br> 
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
