--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,1 +1,169 @@
-<p>contactus works!</p>
+<div class="row mt-4">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header h4">
+        ติดต่อเรา
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-6">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >เบอร์</label
+              >
+              <input
+                type="tel"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="0-3835-4580-4"
+                disabled
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >ที่อยู่</label
+              >
+              <input
+                type="tel"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="199 ม.6 ต.ทุ่งสุขลา อ.ศรีราชา จ.ชลบุรี 20230 "
+                disabled
+              />
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Instragram</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="KUSRC.PR"
+                disabled
+              />
+            </div>
+            <div class="mb-3">
+              <label for="exampleFormControlInput1" class="form-label"
+                >Facebook</label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="exampleFormControlInput1"
+                placeholder="KUSriracha"
+                disabled
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="col-12">
+    <div class="card">
+      <div class="card-header h4" style="text-align: center;">
+        ข้อมูลทั่วไปของศิษย์เก่า
+      </div>
+      <div class="card-body">
+        <div class="row">
+          <div class="col-6">
+            <th>คณะวิทยาการจัดการ</th>
+            ที่ตั้ง : อาคาร 10 ศูนย์เรียนรวม
+            <div style="margin-left: 100px">
+              <img
+                src="https://www.src.ku.ac.th/info/images/location1.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-6">
+            <th>คณะวิศวกรรมศาสตร์ศรีราชา</th>
+            ที่ตั้ง : อาคาร 2 ปฏิบัติการวิศวกรรมศาสตร์ ชั้น 1
+            <div style="margin-left: 100px">
+              <img
+                src="https://www.src.ku.ac.th/info/images/location2.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-6">
+            <th>คณะวิทยาศาสตร์ ศรีราชา</th>
+            ที่ตั้ง : อาคาร 2 ปฏิบัติการวิศวกรรมศาสตร์ ชั้น 2
+            <div style="margin-left: 100px">
+              <img
+                src="https://www.src.ku.ac.th/info/images/location2.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-6">
+            <th>คณะเศรษฐศาสตร์ ศรีราชา</th>
+            ที่ตั้ง: อาคาร 5 วิทยาศาสตร์พื้นฐาน
+            <div style="margin-left: 100px">
+              <img
+                src="https://www.src.ku.ac.th/info/images/location4.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-6">
+            <th>คณะพาณิชยนาวีนานาชาติ</th>
+            ที่ตั้ง : อาคาร 1 บริการวิทยาการ ชั้น 1
+            <div style="margin-left: 100px">
+              <img
+                src="https://www.src.ku.ac.th/info/images/location3.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-6">
+            <th>สำนักงานวิทยาเขต</th>
+            ที่ตั้ง : อาคาร 1 บริการวิทยาการ ชั้น 3
+            <div style="margin-left: 100px">
+              <img
+                src="https://www.src.ku.ac.th/info/images/location3.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="row">
+          <div class="col-6">
+            <th>คณะวิทยาการจัดการ</th>
+            ที่ตั้ง : อาคาร 10 ศูนย์เรียนรวม
+            <div style="margin-left: 100px">
+              <img
+                src="https://www.src.ku.ac.th/info/images/location1.png"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="col-6">
+            <th>คณะวิทยาการจัดการ</th>
+            ที่ตั้ง : อาคาร 10 ศูนย์เรียนรวม
+            <div style="margin-left: 100px">
+              <img
+                src="https://www.src.ku.ac.th/info/images/location1.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
