--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,2 +1,202 @@
-<p>faq works!</p>
-<h1>Hello People</h1>
+<div class="card">
+    <div class="card-header h4" style="text-align: center; font-weight: bold">
+      ถาม / ตอบ
+    </div>
+    <div class="card">
+      <div class="panel-heading">
+        <h3 class="panel-title" data-target="#panel-1" data-toggle="collapse">
+          <div class="card-header h4" style="font-weight: bold">
+            + รางวัลทางการศึกษา
+          </div>
+        </h3>
+      </div>
+      <div class="panel-collapse collapse" id="panel-1">
+        <div class="panel-body">
+          <ul style="font-weight: 600">
+            กรณีได้คะแนนระดับ A จำนวน 5 วิชาขึ้นไป
+          </ul>
+          <ul>
+            1. นิสิตที่ได้คะแนนระดับ A จำนวน 5 วิชาขึ้นไป
+            และมีหน่วยกิตสะสมในรายวิชาที่ได้ A รวมไม่ต่ำกว่า 15 หน่วยกิต
+            มีสิทธิได้รับยกเว้นค่าลงทะเบียนเรียนในภาคการศึกษาปกติภาคถัดไป<br />
+            2.
+            การยกเว้นค่าลงทะเบียนให้ยื่นคำร้องพร้อมใบแสดงผลการเรียนถึงหัวหน้าฝ่ายการศึกษา
+            โดยผ่านอาจารย์ที่ปรึกษา เพื่อดำเนินการยกเว้นค่าลงทะเบียนเรียน
+          </ul>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="card">
+      <div class="panel-heading">
+        <h3 class="panel-title" data-target="#panel-2" data-toggle="collapse">
+          <div class="card-header h4" style="font-weight: bold">
+            + การลงทะเบียนเรียน
+          </div>
+        </h3>
+      </div>
+      <div class="panel-collapse collapse" id="panel-2">
+        <div class="panel-body">
+          <ul style="font-weight: 600">
+            การลงทะเบียนเรียนในกรณีปกติ
+          </ul>
+          <ul>
+            1. การลงทะเบียนเรียนจะต้องลงทะเบียนตามกำหนดของทางมหาวิทยาลัย
+            โดยดูได้จากปฏิทินการศึกษา (ดูปฏิทินการศึกษา)
+            ของนิสิตจะต้องได้รับความเห็นชอบจากอาจารย์ที่ปรึกษา
+            รายละเอียดการลงทะเบียนดูได้จากหัวข้อ "ลงทะเบียน/ชำระค่าธรรมเนียม"
+            (ดูรายละเอียด)<br />
+            2. ในกรณีที่นิสิตได้ลงทะเบียนเรียน (ทางอินเตอร์เน็ต) เรียบร้อยแล้ว
+            แต่ไม่ได้ชำระค่าธรรมเนียมการศึกษาตามกำหนด (ดูปฏิทินการศึกษา)
+            จะถือว่าการลงทะเบียนของนิสิตเป็นโมฆะทันทีในวันสุดท้ายของการชำระค่าธรรมเนียม
+          </ul>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="card">
+      <div class="panel-heading">
+        <h3 class="panel-title" data-target="#panel-3" data-toggle="collapse">
+          <div class="card-header h4" style="font-weight: bold">
+            + ระบบการศึกษาและการสอบ
+          </div>
+        </h3>
+      </div>
+      <div class="panel-collapse collapse" id="panel-3">
+        <div class="panel-body">
+          <ul style="font-weight: 600">
+            ระเบียบการสอบในกรณีสอบตกรายวิชาเลือกเสรี
+          </ul>
+          <ul>
+            1. นิสิตต้องสอบไล่ได้ทุกรายวิชาที่ลงทะเบียนเรียนไว้
+            ในกรณีที่นิสิตสอบตกรายวิชาเลือกเสรี จะเลือกเรียนรายวิชาอื่นทดแทนได้
+            โดยความเห็นชอบของอาจารย์ที่ปรึกษา
+          </ul>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="card">
+      <div class="panel-heading">
+        <h3 class="panel-title" data-target="#panel-4" data-toggle="collapse">
+          <div class="card-header h4" style="font-weight: bold">
+            + ระเบียบการลา
+          </div>
+        </h3>
+      </div>
+      <div class="panel-collapse collapse" id="panel-4">
+        <div class="panel-body">
+          <ul style="font-weight: 600">
+            ระเบียบการลาป่วยและลากิจ
+          </ul>
+          <ul>
+            1. การลาป่วย ลากิจ ที่ไม่เกิน 15 วัน ให้อยู่ในดุลพินิจของอาจารย์ที่
+            ปรึกษาในการอนุมัติ หากเกินจากนี้ต้องได้รับความเห็นชอบจากหัวหน้า
+            ภาควิชาและอนุมัติจากคณบดีเจ้าสังกัด<br />
+            2. นิสิตที่ได้รับอนุมัติให้ลาแล้ว มีสิทธิได้รับผ่อนผันด้านการสอบ
+            การนับ เวลาเรียน และสิทธิอื่น ๆ ที่เกี่ยวข้องกับการเรียน การสอบ
+          </ul>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="card">
+      <div class="panel-heading">
+        <h3 class="panel-title" data-target="#panel-5" data-toggle="collapse">
+          <div class="card-header h4" style="font-weight: bold">
+            + สถานภาพและวินัยนิสิต
+          </div>
+        </h3>
+      </div>
+      <div class="panel-collapse collapse" id="panel-5">
+        <div class="panel-body">
+          <ul style="font-weight: 600">
+            การสิ้นสุดสถานภาพนิสิต
+          </ul>
+          <ul>
+            1. ถึงแก่กรรม<br />
+            2. ลาออก หรือถูกลงโทษทางวินัยให้ไล่ออก หรือให้ออก<br />
+            3. ขาดคุณสมบัติข้อหนึ่งข้อใดตามที่มหาวิทยาลัยกำหนด<br />
+            4. เป็นนิสิตนักศึกษาของสถาบันอุดมศึกษาของรัฐแห่งอื่นด้วย<br />
+            5. ได้รับอนุมัติปริญญาจากสภามหาวิทยาลัยเกษตรศาสตร์แล้ว
+            เว้นแต่จะได้รับอนุมัติจากอธิการบดีให้เข้าศึกษาต่อ<br />
+            6. ไม่ลงทะเบียนเรียนให้เสร็จสิ้นภายใน 3 สัปดาห์นับแต่วันเปิดภาคเรียน
+            (ให้ติดต่อฝ่ายการศึกษาโดยด่วน) เว้นแต่จะได้รับอนุมัติผ่อนผัน<br />
+            7. ไม่ชำระเงินค่าธรรมเนียมการศึกษา เพื่อรักษาสภาพนิสิตภายใน 3 สัปดาห์
+            นับแต่วันเปิดภาคเรียน (ให้ติดต่อฝ่ายการศึกษาโดยด่วน)
+            เว้นแต่จะได้รับการผ่อนผันจากคณบดีเจ้าสังกัดนิสิต<br />
+            8. พักการศึกษาโดยไม่ได้รับอนุญาตตามระเบียบที่กำหนด<br />
+            9. ดำรงสถานภาพนิสิตเกินกำหนด 2
+            เท่าของจำนวนปีการศึกษาทั้งหมดที่กำหนดไว้ในหลักสูตร หรือ 2
+            เท่าของจำนวนภาคการศึกษาปกติที่จำเป็นต้องศึกษา
+            เพื่อให้ได้หน่วยกิตที่ต้องเรียนจนครบถ้วนตามหลักสูตร<br />
+            10. มีแต้มระดับคะแนนเฉลี่ยสะสมต่ำกว่า 1.50
+            ยกเว้นนิสิตใหม่ที่เข้าศึกษาเป็นภาคแรกตามข้อกำหนด<br />
+            11. มีแต้มระดับคะแนนเฉลี่ยสะสมต่ำกว่า 1.75 เป็นเวลา 2
+            ภาคการศึกษาปกติติดต่อกัน
+            ทั้งนี้ไม่นับภาคการศึกษาแรกของนิสิตใหม่ตามกำหนด<br />
+            12. ปลอมลายเซ็นต์ผู้ปกครองหรือลายเซ็นต์บุคคลอื่น
+            เพื่อใช้เป็นหลักฐานต่อมหาวิทยาลัย<br />
+            13. ต้องโทษโดยคำพิพากษาถึงที่สุดให้จำคุก เว้นแต่ความผิดลหุโทษ
+            หรือความผิดอันได้กระทำโดยประมาท
+          </ul>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="card">
+      <div class="panel-heading">
+        <h3 class="panel-title" data-target="#panel-6" data-toggle="collapse">
+          <div class="card-header h4" style="font-weight: bold">
+            + ปัญหาที่พบบ่อย ๆ เกี่ยวกับการศึกษา
+          </div>
+        </h3>
+      </div>
+      <div class="panel-collapse collapse" id="panel-6">
+        <div class="panel-body">
+          <ul style="font-weight: 600">
+            กรณีได้คะแนนระดับ A จำนวน 5 วิชาขึ้นไป
+          </ul>
+          <ul>
+            1. นิสิตที่ได้คะแนนระดับ A จำนวน 5 วิชาขึ้นไป
+            และมีหน่วยกิตสะสมในรายวิชาที่ได้ A รวมไม่ต่ำกว่า 15 หน่วยกิต
+            มีสิทธิได้รับยกเว้นค่าลงทะเบียนเรียนในภาคการศึกษาปกติภาคถัดไป<br />
+            2.
+            การยกเว้นค่าลงทะเบียนให้ยื่นคำร้องพร้อมใบแสดงผลการเรียนถึงหัวหน้าฝ่ายการศึกษา
+            โดยผ่านอาจารย์ที่ปรึกษา เพื่อดำเนินการยกเว้นค่าลงทะเบียนเรียน
+          </ul>
+        </div>
+      </div>
+    </div>
+    <br />
+    <div class="card">
+      <div class="panel-heading">
+        <h3 class="panel-title" data-target="#panel-7" data-toggle="collapse">
+          <div class="card-header h4" style="font-weight: bold">+ อื่นๆ</div>
+        </h3>
+      </div>
+      <div class="panel-collapse collapse" id="panel-7">
+        <div class="panel-body">
+          <ul style="font-weight: 600">
+            สิทธิและหน้าที่ของอาจารย์ที่ปรึกษา
+          </ul>
+          <ul>
+            1. ให้คำแนะนำและทำแผนการเรียนของนิสิตร่วมกับนิสิต
+            ให้ถูกต้องตามหลักสูตรที่กำหนดไว้<br />
+            2. ให้คำแนะนำในเรื่องระเบียบข้อบังคับว่าด้วยการศึกษา<br />
+            3. รับผิดชอบในการลงทะเบียนเรียน การเปลี่ยนรายวิชา การเพิ่มรายวิชา
+            การงดเรียนบางรายวิชา และจำนวนหน่วยกิตต่อภาคการศึกษาของนิสิต<br />
+            4. แนะนำวิธีเรียน ให้คำปรึกษา และติดตามผลการเรียนของนิสิต<br />
+            5. พิจารณาคำร้องต่าง ๆ ของนิสิต และดำเนินการให้ถูกต้องตามระเบียบ<br />
+            6. ให้คำปรึกษาเกี่ยวกับความเป็นอยู่และการศึกษาของนิสิตในมหาวิทยาลัย<br />
+            7. รับผิดชอบดูแลความประพฤติของนิสิต
+            ให้เป็นไปตามระเบียบวินัยที่มหาวิทยาลัยกำหนดไว้
+            ในกรณีที่นิสิตกระทำผิดวินัย
+            ให้อาจารย์ที่ปรึกษารายงานให้หัวหน้าภาควิชาและคณบดีทราบ
+            เพื่อพิจารณานำเสนอรองอธิการบดีฝ่ายนิสิตพิจารณาโทษทางวินัยต่อไป
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  
